@@ -1,2 +1,11 @@
-# Connect4
+# Connect4 - Java/JavaFX
  
+## Trabalho Prático Programação Avançada 2020/2021 
+
+### Required
+- Java 15
+- JavaFX
+- Add path to JavaFX on compile
+```
+--module-path /path/to/javafx/sdk --add-modules javafx.controls,javafx.fxml
+```
